# handler_bulk_image_ocr_scan

./: .gitignore  .qmllint.ini  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  REPORT.md
.github/workflows/: build.yml
.qwen/skills/auto-skill-macos-qt-bundle/: SKILL.md
packaging/windows/: AutoPhoto.iss.in
qml/: Main.qml
qml/components/: ToolPanel.qml
scripts/: build-macos.sh  build-windows.ps1
src/: BatchProcessor.cpp  BatchProcessor.h  BoundedBuffer.h  ImageCompressor.cpp  ImageCompressor.h  ImageListModel.cpp  ImageListModel.h  ImageOrientation.cpp  ImageOrientation.h  ImageProcessor.cpp  ImageProcessor.h  ImageProcessorInternal.h  PreviewController.cpp  PreviewController.h  SshTunnelController.cpp  SshTunnelController.h  main.cpp
src/platform/: DesktopPlatform.cpp  DesktopPlatform.h  PlatformFactory.cpp  PlatformFactory.h  PlatformInterface.h
